fix: image not scale properly on mobile view

--- a/css/travel.css
+++ b/css/travel.css
@@ -8,6 +8,6 @@
     /* border-radius: 1vw;
     border: 1vw solid #36a66863;
     margin: 10px 10px 10px 10px; */
-    width: 100%;
+    /* width: 100%;
     object-fit: cover;
-  } */
+  } */ 
